# LLTDResponder

./: .gitignore  Makefile  README.md  distribution.xml
Documentation/: automata_runtime.md  lltdResponder.1  lltd_automata_specification.md  macos_darwin_universal_build.md  sources.txt  windows_openwatcom_win16_win9x.md  windows_win32_user_mode_build.md
LLMNRd/: LLMNRd-Info.plist  automata.c  automata.h  darwin-main.c  darwin-main.h  darwin-ops.c  darwin-ops.h  linux-main.c  linux-main.h  llmnrd.1  llmnrd.c  llmnrd.h  lltdAutomata.c  lltdAutomata.h  lltdBlock.c  lltdBlock.h  lltdDaemon.1  lltdDaemon.h  lltdTlvOps.c  lltdTlvOps.h  main.c  main.m  main_autom.c  net.shmessenger.darwin.llmnrd.plist  see-list.c  see-list.h  tlv-ops.c  tlv-ops.h
LLMNRd.xcodeproj/: project.pbxproj
llmnrDaemon/: configure.ac  net.shmessenger.darwin.llmnrDaemon.plist
llmnrd/: lltdAutomata.c  lltdAutomata.h  lltdDaemon.1
lltdDaemon/: configure.ac  darwin-main.c  darwin-main.h  darwin-ops.c  darwin-ops.h  linux-main.c  linux-main.h  linux-ops.c  linux-ops.h  lltdAutomata.c  lltdAutomata.h  lltdBlock.c  lltdBlock.h  lltdDaemon.1  lltdDaemon.h  lltdTestShim.h  lltdTlvOps.c  lltdTlvOps.h  main_autom.c
lltdDaemon.xcodeproj/: project.pbxproj
lltdDaemon/win32/: CMakeLists.txt  README.md  lltd_win32_stubs.c
lltdResponder.xcodeproj/: project.pbxproj
os/windows/win32-user/: CMakeLists.txt  README.md  lltd_port.c  lltd_win32_stubs.c  windows-backend-legacy.c  windows-backend-ndis.c  windows-main.c  windows-main.h  windows-ops.c  windows-ops.h  windows-shared.c  windows-shared.h
(+155 files in other folders)
